--- a/PersonalShop/app/build.gradle
+++ b/PersonalShop/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     //Picasso
     def picassoVersion = "2.71828"
     implementation "com.squareup.picasso:picasso:$picassoVersion"
+    def lifecycle_version = '1.1.1'
+    implementation    "android.arch.lifecycle:extensions:$lifecycle_version”
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     implementation "com.squareup.retrofit2:retrofit:2.8.1"
