--- a/PersonalShop/app/src/main/AndroidManifest.xml
+++ b/PersonalShop/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             </intent-filter>
             <meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
         </activity>
+        <activity android:name=".detail.DetailActivity" />
     </application>
 
 </manifest>
