--- a/PersonalShop/app/build.gradle
+++ b/PersonalShop/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
 }
