--- a/PersonalShop/app/build.gradle
+++ b/PersonalShop/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     testImplementation 'org.mockito:mockito-inline:2.13.0'
+    testImplementation "android.arch.core:core-testing:1.1.1"
+    testImplementation "org.mockito:mockito-core:2.19.0"
 }
